# PDash

./: .gitignore  .gitmodules  CMakeLists.txt  PD.kdev4  README.md  crowdin.yml
.github/workflows/: cmake.yml
.kdev4/: PD.kdev4
cmake/: macOS.cmake  windows.cmake
src/: MainWindow.cpp  MainWindow.hpp  PDApplication.cpp  PDApplication.hpp  main.cpp  qml.qrc
src/Core/: PDBaseListModel.cpp  PDBaseListModel.hpp  PDBaseModel.cpp  PDBaseModel.hpp  PluginManager.cpp  PluginManager.hpp  QMLPropertyHelpers.hpp  QObjectPropertyMap.hpp
src/DB/: DBManager.cpp  DBManager.hpp
src/DB/QSQLCipherDriver/: QSQLCipherDriver.cpp  QSQLCipherDriver.hpp
src/Models/: ActivitiesModel.cpp  ActivitiesModel.hpp  ComponentPropertyModel.cpp  ComponentPropertyModel.hpp  MainWindowModel.cpp  MainWindowModel.hpp  PanelModel.cpp  PanelModel.hpp  PluginComponentPropertyModel.cpp  PluginComponentPropertyModel.hpp  ThemesModel.cpp  ThemesModel.hpp
src/Models/Base/: PDBaseModel.hpp  PDBaseModel2.cpp  PDBaseModel2.hpp  QMLListPropertyHelper.hpp  QMLPropertyHelpers.hpp
src/PDPlugins/: CMakeLists.txt
src/PDPlugins/Clock/: CMakeLists.txt  Clock.cpp  Clock.hpp  ClockItem.qml  back.cpp  back.hpp
src/PDPlugins/Clock/qml/: ClockItem.qml
src/Plugins/: PluginInterface.hpp  PluginManager.cpp  PluginManager.hpp
src/qml/: LoginPage.qml  MainComponent.qml  MainWindow.qml  main.qml  qml.cmake
src/qml/components/: ActivityListView.qml  CircularButton.qml  DBPasswordQueryView.qml  FixedGrid.qml  PDPanel.qml  PanelGrid.qml  RectangleAreaHandle.qml  Themes.qml
src/qml/controls/: AutoLoader.qml  CircularButton.qml  PDGlowedRectangle.qml  PDLabel.qml  PDPanelCard.qml
src/qml/views/: ActivityListView.qml  ComponentPropertyEditor.qml  GridPanelsView.qml  LoginView.qml  PluginTypeView.qml
translation/: PD_zh_CN.ts
translations/: PD_en_US.ts  PD_zh_CN.ts
